# Neuro

./: README.md  channel_layout.json  nb.ipynb  pyproject.toml
src/: session.py  signal_processing.py  utils.py
